clang/test/BSC/Negative/Trait/trait_qualifiers_this_param/trait_qualifiers_this_param.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

trait F {
  int foo(const This* this);
  int goo(owned This* this); // expected-error {{type of 'This' cannot be qualified by 'owned'}}
  int hoo(const owned This* this); // expected-error {{type of 'const This' cannot be qualified by 'owned'}}
  int ioo(This* const owned this);
  int joo(const This* const this);
  int koo(owned This* owned this); // expected-error {{type of 'This' cannot be qualified by 'owned'}}
  int loo(owned This* const this); // expected-error {{type of 'This' cannot be qualified by 'owned'}}
  int moo(const This* owned this);
};

int int::foo(const int* this) {
  return 1;
}

int int::goo(owned int* this) { // expected-error {{type of 'int' cannot be qualified by 'owned'}}
  return 1;
}

int int::hoo(const owned int* this) { // expected-error {{type of 'const int' cannot be qualified by 'owned'}}
  return 1;
}

int int::ioo(int* const owned this) {
  int *p = (int *)this;
  return 1;
}

int int::joo(const int* const this) {
  return 1;
}

int int::koo(owned int* owned this) { // expected-error {{type of 'int' cannot be qualified by 'owned'}}
  int *p = (int *)this;
  return 1;
}

int int::loo(owned int* const this) { // expected-error {{type of 'int' cannot be qualified by 'owned'}}
  return 1;
}

int int::moo(const int* owned this) {
  int *p = (int *)this;
  return 1;
}

impl trait F for int;

int main(){
  return 0;
}
